# caj2pdf-restructured

./: .flake8  .gitattributes  .gitignore  README.md  build.py  pyproject.toml
.github/workflows/: build.yaml  publish.yaml  test.yaml
caj2pdf/: cajparser.py  cli.py  exceptions.py  exe_convert.py  install.py  pdfwutils.py  utils.py
caj2pdf/dep/: decode_jbig2data.cc  decode_jbig2data_x.cc  jbig2dec.py  jbigdec.py
tests/: c8_src.caj  caj_src.caj  hn_src.caj  kdh_src.caj
