[tool.poetry]
name = "caj2pdf-restructured"
version = "0.1.0-alpha1"
description = "caj2pdf 重新组织，方便打包与安装"
authors = [
    "Hin-Tak Leung <htl10@users.sourceforge.net>",
    "JeziL <wangjinlithu@gmail.com>",
]
maintainers = ["zombie110year <zombie110year@outlook.com>"]
license = "GLWTPL"
repository = "https://github.com/zombie110year/caj2pdf-restructured/"
classifiers = [
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = ["cnki", "caj", "pdf"]
readme = "README.md"


packages = [{ include = "caj2pdf" }]
build = "build.py"
# exclude = ["caj2pdf/dep/bin/*.dll"]

[tool.poetry.scripts]
caj2pdf = "caj2pdf.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
pypdf2 = "^1.26.0"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
isort = "^5.8.0"
setuptools = "^56.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
