[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    { name = "Hin-Tak Leung", email = "htl10@users.sourceforge.net" },
    { name = "JeziL", email = "wangjinlithu@gmail.com" },
]
maintainers = [{ name = "zombie110year", email = "zombie110year@outlook.com" }]
license = { text = "GLWTPL" }
requires-python = ">=3.10,<4.0"
dependencies = ["pypdf2<2.0.0,>=1.26.0"]
name = "caj2pdf-restructured"
version = "0.1.0a5"
description = "caj2pdf 重新组织，方便打包与安装"
classifiers = [
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = ["cnki", "caj", "pdf"]
readme.content-type = "text/markdown"
readme.file = "README.md"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "isort<6.0.0,>=5.8.0",
    "setuptools<57.0.0,>=56.0.0",
    "black<23.0.0,>=22.6.0",
]

[tool.pdm.build]
includes = ["caj2pdf"]
setup-script = "build.py"
run-setuptools = true

[[tool.pdm.source]]
name = "pypi"
url = "https://mirrors.aliyun.com/pypi/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[project.urls]
repository = "https://github.com/zombie110year/caj2pdf-restructured/"

[project.scripts]
caj2pdf = "caj2pdf.cli:main"
caj2pdf-ec = "caj2pdf.exe_convert:main"
