[project]
name = "caj2pdf-restructured"
dynamic = ["version", "entry-points"]
description = "caj2pdf 项目的重新组织，方便打包与安装"
authors = [
    { name = "Hin-Tak Leung", email = "htl10@users.sourceforge.net" },
    { name = "JeziL", email = "wangjinlithu@gmail.com" },
]
maintainers = [{ name = "zombie110year", email = "zombie110year@outlook.com" }]
dependencies = ["imagesize==1.3.0", "PyPDF2==2.2.0"]
requires-python = ">=3.10"
readme.content-type = "text/markdown"
readme.file = "README.md"
license = { text = "GLWTPL" }

classifiers = [
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = ["cnki", "caj", "pdf"]

[project.urls]
repository = "https://github.com/zombie110year/caj2pdf-restructured/"

[project.scripts]
caj2pdf = "caj2pdf.cli:main"
caj2pdf-ec = "caj2pdf.exe_convert:main"


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
version = { source = "file", path = "caj2pdf/version.py" }

[tool.pdm.build]
excludes = ["tests/**"]
setup-script = "build.py"
run-setuptools = true

[[tool.pdm.source]]
name = "pypi"
url = "https://mirrors.aliyun.com/pypi/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.10.0",
    "isort>=5.10.1",
    "flake8>=5.0.4",
    "setuptools>=65.6.0",
]

[tool.setuptools.package-data]
caj2pdf = ["*.dll", "*.so"]
